<?xml version="1.0"?>
<package format="3">
  <name>turtlebot4_python_controller</name>
  <version>0.0.1</version>
  <description>Python controller for TurtleBot4</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>irobot_create_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>